@@ -66,6 +66,7 @@ TRUNK
 - Intervals of mod_cron managed periodic jobs made configurable
 - When mod_smacks is enabled, s2s connections not responding to ack requests are closed.
 - Arguments to `prosodyctl shell` that start with ':' are now turned into method calls
+- Support for Type=notify and notify-reload systemd service type added
 
 ## Removed
 
